--- a/vercel.json
+++ b/vercel.json
@@ -15,14 +15,14 @@
             "dest": "/api/index.php"
         },
         {
-            "src": "/banner/(.*)",
-            "dest": "/public/banner/"
+            "src": "/gambar/(.*)",
+            "dest": "/public/gambar/"
         }
     ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://example-atomik.vercel.app/",
+        "APP_URL": "https://bunga-collection.vercel.app/",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
